--- a/src/Muflone.Transport.RabbitMQ/Muflone.Transport.RabbitMQ.csproj
+++ b/src/Muflone.Transport.RabbitMQ/Muflone.Transport.RabbitMQ.csproj
@@ -14,6 +14,8 @@
     <FileVersion>6.0.1</FileVersion>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Version>6.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
