--- a/src/Muflone.Transport.RabbitMQ/Muflone.Transport.RabbitMQ.csproj
+++ b/src/Muflone.Transport.RabbitMQ/Muflone.Transport.RabbitMQ.csproj
@@ -15,7 +15,10 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>6.1.3</Version>
+    <Version>6.1.4</Version>
+    <RepositoryUrl>https://github.com/CQRS-Muflone/Muflone.Transport.RabbitMQ</RepositoryUrl>
+    <PackageReleaseNotes>Split package registration from consumers activation
+Simplify ConsumerBase</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
