Update Nuget version

--- a/src/Muflone.Transport.RabbitMQ/Muflone.Transport.RabbitMQ.csproj
+++ b/src/Muflone.Transport.RabbitMQ/Muflone.Transport.RabbitMQ.csproj
@@ -16,6 +16,7 @@
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Version>6.2.2</Version>
+    <PackageVersion>6.2.3</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
