--- a/src/Muflone.Transport.RabbitMQ/Muflone.Transport.RabbitMQ.csproj
+++ b/src/Muflone.Transport.RabbitMQ/Muflone.Transport.RabbitMQ.csproj
@@ -13,16 +13,16 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>8.1.1</Version>
-    <PackageReleaseNotes>Implements new IDomainId</PackageReleaseNotes>
+    <Version>8.2.0</Version>
+    <PackageReleaseNotes>Fix UTF8 deserialization of messages</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-    <PackageReference Include="Muflone" Version="8.1.2" />
-    <PackageReference Include="Polly" Version="8.4.1" />
+    <PackageReference Include="Muflone" Version="8.1.3" />
+    <PackageReference Include="Polly" Version="8.5.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
