--- a/src/Muflone.Transport.RabbitMQ.AppTests/Muflone.Transport.RabbitMQ.AppTests.csproj
+++ b/src/Muflone.Transport.RabbitMQ.AppTests/Muflone.Transport.RabbitMQ.AppTests.csproj
@@ -9,7 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-      <PackageReference Include="Muflone" Version="8.1.3" />
+        <PackageReference Include="Muflone" Version="8.3.0-alpha" />
     </ItemGroup>
 
     <ItemGroup>
