--- a/src/Muflone.Transport.RabbitMQ.AppTests/Muflone.Transport.RabbitMQ.AppTests.csproj
+++ b/src/Muflone.Transport.RabbitMQ.AppTests/Muflone.Transport.RabbitMQ.AppTests.csproj
@@ -9,10 +9,11 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-        <PackageReference Include="Muflone" Version="8.3.0-alpha" />
+
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\Muflone\src\Muflone\Muflone.csproj" />
       <ProjectReference Include="..\Muflone.Transport.RabbitMQ\Muflone.Transport.RabbitMQ.csproj" />
     </ItemGroup>
 
