--- a/src/Muflone.Transport.RabbitMQ/Muflone.Transport.RabbitMQ.csproj
+++ b/src/Muflone.Transport.RabbitMQ/Muflone.Transport.RabbitMQ.csproj
@@ -13,7 +13,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>8.3.1-alpha</Version>
+    <Version>8.4.0</Version>
     <PackageReleaseNotes>Fix UTF8 deserialization of messages</PackageReleaseNotes>
   </PropertyGroup>
 
