--- a/src/Muflone.Transport.RabbitMQ/Muflone.Transport.RabbitMQ.csproj
+++ b/src/Muflone.Transport.RabbitMQ/Muflone.Transport.RabbitMQ.csproj
@@ -13,7 +13,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>8.5.0</Version>
+    <Version>8.5.0-beta.1</Version>
     <PackageReleaseNotes>Fixes pub/sub event dispatch to multiple subscribers</PackageReleaseNotes>
   </PropertyGroup>
 
